--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://gitlab.com/tymitchell2100/kenziegram-part2#README",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "pug": "^2.0.3"
   }
